--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.navbar a{
+  color:#fff;
+}
+.navbar a:hover{
+  color:#ddd;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
